[gd_scene load_steps=5 format=3 uid="uid://b0e6p2sm7c4va"]

[ext_resource type="Script" uid="uid://c85utvmtdanpx" path="res://scenes/piece_spawner.gd" id="1_nvhmr"]
[ext_resource type="PackedScene" uid="uid://j6rlujksnrsv" path="res://scenes/pieces/pipe.tscn" id="2_q5hwa"]
[ext_resource type="Texture2D" uid="uid://bbjnl0gvngfgx" path="res://assets/StraightPipe.png" id="3_5cmve"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2enb5"]

[node name="PieceSpawner" type="Node2D"]
script = ExtResource("1_nvhmr")
piece = ExtResource("2_q5hwa")
sprite = ExtResource("3_5cmve")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_2enb5")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
